# learning-signal-density

./: .gitignore  LICENSE  README.md  UPSTREAMS.md  pyproject.toml
autoresearch/: learning_signal_density_spec.json  run_config.json
docs/: literature.md  preregistration.md  research-roadmap.md
learning_signal_density/: __init__.py  break_even.py  domain.py  experiment.py  induction.py  learner.py  neural.py  neural_experiment.py  neural_feature_sweep.py  neural_profile_sweep.py  neural_sweep.py  newsgroups_experiment.py  pipelines.py  real_text_experiment.py  sweep.py
paper/: README.md  main.tex  references.bib
public/: README.md
results/: README.md  causal_world_pilot_seedset.json  causal_world_pilot_seedset.md  confirmation_budget_sweep.json  confirmation_budget_sweep.md  generated_coverage_audit_selector_transfer_f1024.json  generated_coverage_audit_selector_transfer_f1024.md  generated_label_audit_selector_transfer_f1024.json  generated_label_audit_selector_transfer_f1024.md  policy_envelope_f1024.json  policy_envelope_f1024.md  real_text_break_even_certificate.json  real_text_break_even_certificate.md  sample_budget_sweep.json  sample_budget_sweep.md  sms_spam_break_even_analysis.json  sms_spam_break_even_analysis.md  sms_spam_real_text_selection_cost.json  sms_spam_real_text_selection_cost.md  sms_spam_real_text_selection_cost_v200.json  sms_spam_real_text_selection_cost_v200.md  support_mechanism_audit_f1024.json  support_mechanism_audit_f1024.md  support_selector_error_audit_f1024.json  support_selector_error_audit_f1024.md  tiny_neural_budget_sweep.json  (+89 more)
(+38 files in other folders)
